Add java xml build to run opts, minors